--- a/cliente/SpecRunner.html
+++ b/cliente/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="modelo.js"></script>
+  <script src="src/modelo.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/modeloSpec.js"></script>
