--- a/cliente/index.html
+++ b/cliente/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Bombergame</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="src/clienteRest.js"></script>
+  <title>Bombergame</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="src/clienteRest.js"></script>
+  <script src="src/controlWeb.js"></script>
 </head>
 <body>
-	<h2>Bienvenido a BomberGame</h2>
-	<script>
-		rest=new ClienteRest();
-	</script>
+  <div class="jumbotron text-center">
+    <h1>Bomber Game</h1>
+    <p>El juego del año 2019 en la ESII</p> 
+  </div>
+  <div class="container">
+    <div class="row">
+       <div class="col">
+        <div id="inicio"></div>
+      </div>
+    </div>
+  </div>
+  <script>
+      rest=new ClienteRest();
+      mostrarAgregarUsuario();
+  </script>
 </body>
 </html>
