creacion de cookies

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -28,7 +28,8 @@
   </div>
   <script>
       rest=new ClienteRest();
-      mostrarAgregarUsuario();
+      //mostrarAgregarUsuario();
+      comprobarUsuario();
   </script>
 </body>
 </html>
